# hathor-explorer-service

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile_Daemons  Dockerfile_Serverless  Dockerfile_Service  LICENSE  Makefile  README.md  configuration.yml  daemons_runner.py  docker-compose.yml  openapi.yml  package-lock.json  package.json  pyproject.toml  serverless-local.yml  serverless.yml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: feature_branch_pr_template.md  release_candidate_pr_template.md  release_pr_template.md
.github/workflows/: codeql.yml  deploy-reusable.yml  deploy.yml  pr-validation.yml
common/: __init__.py  configuration.py  errors.py  logging.py
daemons/: data_collector.py
domain/: wallet_service.py
domain/metadata/: metadata.py  token_metadata.py  transaction_metadata.py
domain/network/: network.py  node.py
domain/node_api/: address_balance.py  address_search.py  transaction.py
domain/report/: report.py
domain/tx/: token.py
gateways/: block_api_gateway.py  healthcheck_gateway.py  metadata_gateway.py  network_statistics_api_gateway.py  node_api_gateway.py  node_gateway.py  report_gateway.py  token_api_gateway.py  token_balances_api_gateway.py  token_gateway.py  wallet_service_gateway.py
gateways/aws/: lambda_client.py  lambda_gateway.py
gateways/cache/: cache_client.py  cache_gateway.py
gateways/clients/: cache_client.py  elastic_search_client.py  hathor_core_client.py  lambda_client.py  report_client.py  s3_client.py  wallet_service_db_client.py
gateways/hathor/: hathor_core_client.py  hathor_core_gateway.py
handlers/: block_api.py  dag_metadata_handler.py  get_dag_metadata_handler.py  get_healthcheck.py  get_metadata_handler.py  get_network_handler.py  get_node_handler.py  get_token_handler.py  get_token_meta_handler.py  healthcheck.py  icon_metadata_handler.py  list_nodes_handler.py  network_data_aggregator.py  network_handler.py  network_statistics.py  node_api.py  node_data_aggregator.py  post_report_handler.py  put_dag_metadata_handler.py  token_api.py  token_balance_api.py  wallet_service.py
src/: data_collector.py
terraform/: main.tf
tests/fixtures/: elastic_search_fixtures.py  hathor_core_fixtures.py  metadata_factory.py  network_factory.py  node_api_factory.py  node_factory.py  (+3 more)
text/: 0001-data-collector.md  0002-data-aggregator.md  0002-network-handler.md  0003-metadata-api.md  0005-send-report.md  api-docs.yml
usecases/: aggregate_node_data.py  block_api.py  collect_nodes_statuses.py  get_healthcheck.py  get_metadata.py  get_network.py  get_node.py  get_token.py  get_token_metadata.py  healthcheck.py  list_available_nodes.py  metadata.py  network_statistics_api.py  node_api.py  put_metadata.py  save_network_data.py  save_node_data.py  send_report.py  token_api.py  token_balances_api.py  wallet_service.py
(+73 files in other folders)
