[tool.poetry]
name = "hathor-explorer-service"
version = "0.0.1"
description = ""
authors = ["Giovane Costa <gigio.coder@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
boto3 = "^1.17.72"
python-dotenv = "^0.17.1"
asyncio = "^3.4.3"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
