[tool.poetry]
name = "hathor-explorer-service"
version = "0.12.1"
description = ""
authors = ["Hathor Labs <contact@hathor.network>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
redis = "^3.5.3"
boto3 = "^1.28.83"
python-dotenv = "^0.17.1"
aiohttp = "^3.7.4"
aws-lambda-context = "^1.1.0"
python-decouple = "^3.4"
dacite = "^1.6.0"
requests = "^2.25.1"
structlog = "^21.1.0"
deepdiff = "^5.7.0"
hathorlib = "^0.5.2"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.4.40"
elasticsearch = "~8.1.2"
python-healthchecklib = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.8.0"
pytest-cov = "^2.12.0"
Faker = "^8.4.0"
factory-boy = "^3.2.0"
fakeredis = "^1.5.1"
pytest-aiohttp = "^0.3.0"
black = "^22.6.0"
mypy = "^1.7.0"
types-requests = "^2.28.9"
types-redis = "^4.3.19"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.40"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
combine_as_imports = true
default_section = "THIRDPARTY"
known_first_party = "common,daemons,domain,gateways,handlers,tests,usecases,utils"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.coverage.run]
branch = true
omit = [
    'tests/*',
    'node_modules/*',
    'daemons/*',
    'daemons_runner.py',
    '*/**/__init__.py',
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
exclude = [
    '/tests',
]
